--- a/at1/home/Templates/home.html
+++ b/at1/home/Templates/home.html
@@ -21,11 +21,7 @@
   <body>
     <div class="row top">
       <div class="boxcenter">
-        <img
-          src="{% static 'images/anh001.png'%}"
-          alt="logo"  
-          
-        />
+        <img src="{% static 'images/anh001.png'%}" alt="logo" />
       </div>
       <div class="menu">
         <ul>
@@ -47,7 +43,7 @@
             </div>
             <div class="row boxnews1 brdbot">
               <img src="{% static 'images/2.jpg'%}" alt="" />
-              <a href="*"> Chăm sóc thú cưng tận tình</a>
+              <a href="*"> tam meo ne </a>
             </div>
             <div class="row boxnews1 brdbot">
               <img src="{% static 'images/3.jpg' %}" alt="" />
