--- a/static/css2/home.css
+++ b/static/css2/home.css
@@ -1,5 +1,6 @@
 body{
   margin: 0;
+  font-family: Arial, sans-serif;
 }
 .row {
         float: left;
@@ -11,7 +12,7 @@ body{
         padding: 5px 2px;
  }
  .content {
-        background-color: rgb(171, 255, 184);
+        background-color: rgb(216, 254, 222);
         min-height: 800px;
       }
       .tinnew {
@@ -59,11 +60,11 @@ body{
         background-size: auto;
       }
       .boxnews1 {
-        padding-bottom: 10px;
-        margin-bottom: 10px;
+        padding-bottom: 20px;
+        margin-bottom: 20px;
       }
       .boxnews1 img {
-        width: 40%;
+        width: 100%;
         margin-right: 10px;
         float: left;
       }
@@ -87,7 +88,7 @@ body{
         list-style-type: none;
         display: flex;
         justify-content: center;
-        padding: 50px 10px;
+        padding: 50px 20px;
         float: left;
         margin-top: 2px;
       }
