--- a/at1/home/Templates/home.html
+++ b/at1/home/Templates/home.html
@@ -15,7 +15,7 @@
     <title>Pet Health Care</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>CHAM SOC THU CUNGCUNG</title>
+    <title>CHAM SOC THU CUNG</title>
     <meta name="description" content="" />
     <link
       rel="stylesheet"
@@ -45,7 +45,11 @@
       <div class="container col-10">
         <div class="row pt-3">
           <div class="col-md-2">
-            <img src="hinhanh/anh001.png" alt="" class="w-50 m-0" />
+            <img
+              src="{% static 'images/anh001.png'%}"
+              alt=""
+              class="w-50 m-0"
+            />
           </div>
           <div class="col-md-10 text-center menu">
             <ul>
@@ -92,16 +96,24 @@
           class="carousel-item active d-flex justify-content-center align-items-center"
         >
           <img
-            src="hinhanh/cham-soc-thu-cung.jpg"
+            src="{% static 'images/cham-soc-thu-cung.jpg'%}"
             alt=" "
             class="d-block w-90"
           />
         </div>
         <div class="carousel-item">
-          <img src="hinhanh/BANNER1.webp" alt=" " class="d-block w-100" />
+          <img
+            src="{% static 'images/BANNER1.webp'%}"
+            alt=" "
+            class="d-block w-100"
+          />
         </div>
         <div class="carousel-item">
-          <img src="hinhanh/hinh9.jpg" alt=" " class="d-block w-100" />
+          <img
+            src="{% static 'images/hinh9.jpg'%}"
+            alt=" "
+            class="d-block w-100"
+          />
         </div>
       </div>
 
@@ -128,7 +140,7 @@
       <div class="container col-10">
         <div class="row">
           <div class="col-md-6">
-            <img src="hinhanh/hinh4.jpg" alt="" class="w-100" />
+            <img src="{% static 'images/hinh4.jpg'%}" alt="" class="w-100" />
             <a href="*"> cham soc thu cung </a>
             <p>
               Danh mục những sản phẩm bán tại "giá tốt hơn" chỉ được bán kênh
@@ -136,7 +148,7 @@
             </p>
           </div>
           <div class="col-md-6">
-            <img src="hinhanh/hinh6.jpg" alt="" class="w-100" />
+            <img src="{% static 'images/hinh6.jpg'%}" alt="" class="w-100" />
             <a href="*"> cham soc thu cung </a>
             <p>
               Danh mục những sản phẩm bán tại "giá tốt hơn" chỉ được bán kênh
@@ -155,27 +167,31 @@
               <h4>Thức Ăn</h4>
               <a href="thuc an cho meo/cho">Thức Ăn Mèo/Chó</a>
             </div>
-            <img src="hinhanh/thucan1.jpg" alt="" class="w-100" />
+            <img src="{% static 'images/thucan1.jpg'%}" alt="" class="w-100" />
           </div>
           <div class="inpic col-md-4 mb-3">
             <div>
               <h4>Đồ Chơi</h4>
               <a href="do choi cho meo/cho"> Đồ Chơi Mèo/Chó</a>
             </div>
-            <img src="hinhanh/dochoi.jpg" alt="" class="w-100" />
+            <img src="{% static 'images/dochoi.jpg'%}" alt="" class="w-100" />
           </div>
           <div class="inpic col-md-4 mb-3">
             <div>
               <h4>Thời Trang</h4>
               <a href="quan ao cho meo/cho"> Thời Trang Mèo/Chó</a>
             </div>
-            <img src="hinhanh/thoitrang.jpg" alt="" class="w-100" />
+            <img
+              src="{% static 'images/thoitrang.jpg' %}"
+              alt=""
+              class="w-100"
+            />
           </div>
         </div>
       </div>
     </section>
     <div class="banner1">
-      <img src="hinhanh/anh1.jpeg" alt="" class="w-100" />
+      <img src="{% static 'images/anh1.jpeg'%}" alt="" class="w-100" />
     </div>
     <section class="pt-5 pb-5">
       <h3 class="text-center mb-3">BÀI VIẾT LIÊN QUAN</h3>
@@ -184,7 +200,11 @@
           <div class="col-md-3">
             <div class="card">
               <div class="card-body">
-                <img src="hinhanh/web1.webp " alt="" class="w-100" />
+                <img
+                  src="{% static 'images/web1.webp'%} "
+                  alt=""
+                  class="w-100"
+                />
                 <h5>HƯỚNG DẪN CHĂM SÓC</h5>
                 <p class="card-text">
                   Những chú cún, chó mèo sẽ là người bạn tâm giao của bạn
@@ -202,7 +222,11 @@
           <div class="col-md-3">
             <div class="card">
               <div class="card-body">
-                <img src="hinhanh/hinh13.jpg " alt="" class="w-100" />
+                <img
+                  src="{% static 'images/hinh13.jpg'%} "
+                  alt=""
+                  class="w-100"
+                />
                 <h5>DỊCH VỤ CHĂM SÓC DỊP TẾT</h5>
                 <p class="card-text">
                   Để đảm bảo việc chăm sóc thú cưng cho những ngày về...
@@ -219,7 +243,11 @@
           <div class="col-md-3">
             <div class="card">
               <div class="card-body">
-                <img src="hinhanh/web3.jpg " alt="" class="w-100" />
+                <img
+                  src="{% static 'images/web3.jpg'%} "
+                  alt=""
+                  class="w-100"
+                />
                 <h5>TOP DỊCH VỤ</h5>
                 <p class="card-text">
                   Dịch vụ chăm sóc thú cưng uy tín tại Sài Gòn...
@@ -236,14 +264,18 @@
           <div class="col-md-3">
             <div class="card">
               <div class="card-body">
-                <img src="hinhanh/hinh14.jpg " alt="" class="w-100" />
+                <img
+                  src="{% static 'images/hinh14.jpg' %} "
+                  alt=""
+                  class="w-100"
+                />
                 <h5>SPA THÚ CƯNG</h5>
                 <p class="card-text">
                   Dịch vụ Spa cho thú cưng tại PET GALAXY được...
                 </p>
                 <a href="https://www.ohmypet.vn/" class="card-link">
-                  Đọc Thêm</a
-                >
+                  Đọc Thêm
+                </a>
               </div>
             </div>
           </div>
