--- a/project/CNPM/home/templates/home/home.html
+++ b/project/CNPM/home/templates/home/home.html
@@ -32,7 +32,7 @@
     <!--<link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="js/bootstrap.bundle.min.js"></script>-->
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css2/home.css' %}" />
+    <link rel="stylesheet" href="{% static 'home/css/home.css' %}" />
   </head>
   <body>
     <header>
@@ -46,7 +46,7 @@
         <div class="row pt-3">
           <div class="col-md-2">
             <img
-              src="{% static 'images/anh001.png'%}"
+              src="{% static 'home/images/anh001.png'%}"
               alt=""
               class="w-50 m-0"
             />
@@ -96,21 +96,21 @@
             class="carousel-item active d-flex justify-content-center align-items-center"
           >
             <img
-              src="{% static 'images/cham-soc-thu-cung.jpg'%}"
+              src="{% static 'home/images/cham-soc-thu-cung.jpg'%}"
               alt=" "
               class="d-block w-90"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="{% static 'images/BANNER1.webp'%}"
+              src="{% static 'home/images/BANNER1.webp'%}"
               alt=" "
               class="d-block w-100"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="{% static 'images/hinh9.jpg'%}"
+              src="{% static 'home/images/hinh9.jpg'%}"
               alt=" "
               class="d-block w-100"
             />
@@ -140,7 +140,11 @@
         <div class="container col-10">
           <div class="row">
             <div class="col-md-6 body1">
-              <img src="{% static 'images/hinh4.jpg' %}" alt="" class="w-100" />
+              <img
+                src="{% static 'home/images/hinh4.jpg' %}"
+                alt=""
+                class="w-100"
+              />
               <a href="*"> KHÁM - CHỮA BỆNH </a>
               <p>
                 Dịch vụ uy tín và chuyên nghiệp, với đội ngũ bác sĩ thú y chuyên
@@ -148,7 +152,11 @@
               </p>
             </div>
             <div class="col-md-6 body1">
-              <img src="{% static 'images/web2.jpg'%}" alt="" class="w-100" />
+              <img
+                src="{% static 'home/images/web2.jpg'%}"
+                alt=""
+                class="w-100"
+              />
               <a href="*"> LƯU CHUỒNG </a>
               <p>Dịch vụ Pet Hotel, thoải mái như ở nhà!!</p>
             </div>
@@ -161,7 +169,7 @@
           <div class="row">
             <div class="inpic col-md-4 mb-3 rdbot">
               <img
-                src="{% static 'images/thucan1.jpg'%}"
+                src="{% static 'home/images/thucan1.jpg'%}"
                 alt="thuc an"
                 class="w-100"
               />
@@ -172,7 +180,7 @@
             </div>
             <div class="inpic col-md-4 mb-3 rdbot">
               <img
-                src="{% static 'images/dochoi.jpg'%}"
+                src="{% static 'home/images/dochoi.jpg'%}"
                 alt="do choi "
                 class="w-100"
               />
@@ -183,7 +191,7 @@
             </div>
             <div class="inpic col-md-4 mb-3">
               <img
-                src="{% static 'images/thoitrang.jpg'%}"
+                src="{% static 'home/images/thoitrang.jpg'%}"
                 alt="thoi trang"
                 class="w-100"
               />
@@ -198,7 +206,7 @@
 
       <div class="banner1">
         <img
-          src="{% static 'images/anh1.jpeg'%}"
+          src="{% static 'home/images/anh1.jpeg'%}"
           alt=""
           class="w-100 rounded-3"
         />
@@ -211,7 +219,7 @@
               <div class="card">
                 <div class="card-body">
                   <img
-                    src="{% static 'images/web1.webp'%} "
+                    src="{% static 'home/images/web1.webp'%} "
                     alt=""
                     class="w-100 rounded-3"
                   />
@@ -232,7 +240,7 @@
               <div class="card">
                 <div class="card-body">
                   <img
-                    src="{% static 'images/hinh13.jpg'%} "
+                    src="{% static 'home/images/hinh13.jpg'%} "
                     alt=""
                     class="w-100 rounded-3"
                   />
@@ -255,7 +263,7 @@
               <div class="card">
                 <div class="card-body">
                   <img
-                    src="{% static 'images/web3.jpg'%} "
+                    src="{% static 'home/images/web3.jpg'%} "
                     alt=""
                     class="w-100 rounded-3"
                   />
@@ -276,7 +284,7 @@
               <div class="card">
                 <div class="card-body">
                   <img
-                    src="{% static 'images/hinh14.jpg' %} "
+                    src="{% static 'home/images/hinh14.jpg' %} "
                     alt=""
                     class="w-100 rounded-3"
                   />
