--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -26,46 +26,78 @@
       <!--header-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href="#">
+                <img src="{%static 'app/images/banner/logomoi.jpg' %}" width="50" height="50" />
+                
+
+              </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#">Trang chủ</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
+                  
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
+                      Sản phẩm
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Thức ăn cho pet</a></li>
+                      <li><a class="dropdown-item" href="#">Thuốc trị rụng lông</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="#">Đồ mặc cho pet </a></li>
                     </ul>
                   </li>
+
                   <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                    <a class="nav-link" href="#">Giới thiệu</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Liên hệ</a>
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                  <input class="form-control me-2" type="gõ vào đây" placeholder="gõ vào đây" aria-label="gõ vào đây">
+                  <button class="btn btn-outline-success" type="submit">Tìm kiếm</button>
                 </form>
               </div>
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Người dùng
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Trang cá nhân</a></li>
+                    <li><a class="dropdown-item" href="#">Đơn hàng</a></li>
+                    <li><a class="dropdown-item" href="#">Thoát</a></li>
+
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Giỏ hàng</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Đăng nhập</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Đăng kí</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Đăng xuất</a>
+                </li>
+              </ul>
+
             </div>
           </nav>
 
           <!-- main body-->
            {% block main-content %}{% endblock  %}
            <!--footer-->
-           <footer>
-                copyright 2024
+           <footer class="container--fluid bg-success text-center fixed-bottom p-2 mt-5">
+                xin chào 2024
            </footer>
         
         <script src="" async defer></script>
