--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -6,18 +6,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!--css-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link href-"{%static 'app/css/style.css'%}" rel="stylesheet" />
-        <link href-"{%static 'app/css/owl.carousel.min.css'%}" rel="stylesheet" />
-        <link href-"{%static 'app/css/all.min.css'%}" rel="stylesheet" />
+        <link href="{%static 'app/css/style.css'%}" rel="stylesheet" />
+        <link href="{%static 'app/css/owl.carousel.min.css'%}" rel="stylesheet" />
+        <link href="{%static 'app/css/all.min.css'%}" rel="stylesheet" />
         <!--js-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-        <script src="{%static 'app/js/c3.js'%}" > </script>
+        <script src="{%static 'app/js/s3.js'%}" > </script>
         <script src="{%static 'app/js/all.min.js'%}" > </script>
         <script src="{%static 'app/js/myscrip.js'%}" > </script>
 
-        <title>Bac Si Thu Y</title>
+        <title>Bác sĩ thú y</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
@@ -27,7 +27,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
-                <img src="{%static 'app/images/banner/logomoi.jpg' %}" width="50" height="50" />
+                <img src="/static/app/images/banner/logomoi.jpg" width="50" height="50" />
                 
 
               </a>
@@ -94,7 +94,8 @@
           </nav>
 
           <!-- main body-->
-           {% block main-content %}{% endblock  %}
+           {%block banner_slider%} {%endblock banner_slider%}
+           {% block main_content %}{% endblock main_content  %}
            <!--footer-->
            <footer class="container--fluid bg-success text-center fixed-bottom p-2 mt-5">
                 xin chào 2024
