--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -1,5 +1,55 @@
 {% extends 'app/base.html' %}
-{%load static%}
-{%block main content%} 
-wellcome mysite
-{% endblock main-content%}
+{% load static %}
+{% block banner_slider %} 
+<div id="carouselExampleDark" class="carousel carousel-dark slide">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+            <img src="/static/app/images/banner/chodai.jpg" class="d-block w-100" alt="Điều trị nấm da" height='500'>
+
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Điều trị nấm da</h5>
+                <p>Da khoẻ và phục hồi.</p>
+            </div>
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+            <img src="/static/app/images/banner/domac3.jpg" class="d-block w-100" alt="Đồ cho thú cưng" height='700'>
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Đồ cho thú cưng</h5>
+                <p>Dễ thương, màu sắc.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="{% static 'app/images/banner/doan.jpg' %}" class="d-block w-100" alt="Thức ăn thú cưng" height='700'>
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Thức ăn thú cưng</h5>
+                <p>Đầy đủ dinh dưỡng và dưỡng chất.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="{% static 'app/images/banner/pe.webp' %}" class="d-block w-100" alt="Cắt tỉa lông thú cưng" height='700'>
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Cắt tỉa lông thú cưng</h5>
+                <p>Xinh xắn, đáng yêu.</p>
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
+{% endblock banner_slider %}
+
+{% block main_content %} 
+Welcome to my site!
+{% endblock main_content %}
