--- a/project/CNPM/home/templates/footer.html
+++ b/project/CNPM/home/templates/footer.html
@@ -1,5 +1,5 @@
-<footer class="footer">
-  <div class="container-fluid col-10">
+<footer>
+  <div class="container-fluid col-10 footer">
     <div class="row pt-3 pb-3">
       <div class="col-md-4 care">
         <h4>Đánh Giá Của Khách Hàng</h4>
