--- a/project/CNPM/home/templates/headerbody.html
+++ b/project/CNPM/home/templates/headerbody.html
@@ -1,4 +1,4 @@
-<headerbody>
+<header>
   <div class="container-fluid p-1 bgtop1 text-center">
     <div class="container">
       <marquee> Chăm Sóc Thú Cưng Số 1 Tại Thành Phố Hồ Chí Minh </marquee>
@@ -8,11 +8,13 @@
   <div class="container col-10">
     <div class="row pt-3">
       <div class="col-md-2">
-        <img
-          src="{% static 'home/images/anh001.png'%}"
-          alt=""
-          class="w-50 m-0"
-        />
+        <a href="http://127.0.0.1:8000/" target="home">
+          <img
+            src="{% static 'home/images/anh001.png'%}"
+            alt=""
+            class="w-50 m-0"
+          />
+        </a>
       </div>
       <div class="col-md-10 text-center menu">
         <ul>
@@ -29,4 +31,4 @@
       </div>
     </div>
   </div>
-</headerbody>
+</header>
