--- a/project/CNPM/home/templates/home/home.html
+++ b/project/CNPM/home/templates/home/home.html
@@ -45,11 +45,13 @@
       <div class="container col-10">
         <div class="row pt-3">
           <div class="col-md-2">
-            <img
-              src="{% static 'home/images/anh001.png'%}"
-              alt=""
-              class="w-50 m-0"
-            />
+            <a href="http://127.0.0.1:8000/" target="home">
+              <img
+                src="{% static 'home/images/anh001.png'%}"
+                alt=""
+                class="w-50 m-0"
+              />
+            </a>
           </div>
           <div class="col-md-10 text-center menu">
             <ul>
@@ -140,11 +142,13 @@
         <div class="container col-10">
           <div class="row">
             <div class="col-md-6 body1">
-              <img
-                src="{% static 'home/images/hinh4.jpg' %}"
-                alt=""
-                class="w-100"
-              />
+              <div class="mw-100 mh-100">
+                <img
+                  src="{% static 'home/images/hinh4.jpg' %}"
+                  alt=""
+                  class="w-100"
+                />
+              </div>
               <a href="*"> KHÁM - CHỮA BỆNH </a>
               <p>
                 Dịch vụ uy tín và chuyên nghiệp, với đội ngũ bác sĩ thú y chuyên
@@ -152,11 +156,13 @@
               </p>
             </div>
             <div class="col-md-6 body1">
-              <img
-                src="{% static 'home/images/web2.jpg'%}"
-                alt=""
-                class="w-100"
-              />
+              <div>
+                <img
+                  src="{% static 'home/images/hinh16.jpg'%}"
+                  alt=""
+                  class="w-100"
+                />
+              </div>
               <a href="*"> LƯU CHUỒNG </a>
               <p>Dịch vụ Pet Hotel, thoải mái như ở nhà!!</p>
             </div>
@@ -174,7 +180,7 @@
                 class="w-100"
               />
               <div>
-                <h4 class="fw-bold">Thức Ăn</h4>
+                <h4 class="fw-bold inpic">Thức Ăn</h4>
                 <a href="thuc an cho meo/cho">Thức Ăn Mèo/Chó</a>
               </div>
             </div>
