--- a/project/CNPM/home/templates/main.html
+++ b/project/CNPM/home/templates/main.html
@@ -71,11 +71,13 @@
     <div class="container col-10">
       <div class="row">
         <div class="col-md-6 body1">
-          <img
-            src="{% static 'home/images/hinh4.jpg' %}"
-            alt=""
-            class="w-100"
-          />
+          <div class="mw-100 mh-100">
+            <img
+              src="{% static 'home/images/hinh4.jpg' %}"
+              alt=""
+              class="w-100"
+            />
+          </div>
           <a href="*"> KHÁM - CHỮA BỆNH </a>
           <p>
             Dịch vụ uy tín và chuyên nghiệp, với đội ngũ bác sĩ thú y chuyên môn
@@ -83,7 +85,13 @@
           </p>
         </div>
         <div class="col-md-6 body1">
-          <img src="{% static 'home/images/web2.jpg'%}" alt="" class="w-100" />
+          <div>
+            <img
+              src="{% static 'home/images/hinh16.jpg'%}"
+              alt=""
+              class="w-100"
+            />
+          </div>
           <a href="*"> LƯU CHUỒNG </a>
           <p>Dịch vụ Pet Hotel, thoải mái như ở nhà!!</p>
         </div>
@@ -101,7 +109,7 @@
             class="w-100"
           />
           <div>
-            <h4 class="fw-bold">Thức Ăn</h4>
+            <h4 class="fw-bold inpic">Thức Ăn</h4>
             <a href="thuc an cho meo/cho">Thức Ăn Mèo/Chó</a>
           </div>
         </div>
