--- a/project/CNPM/home/templates/master.html
+++ b/project/CNPM/home/templates/master.html
@@ -35,306 +35,8 @@
     <link rel="stylesheet" href="{% static 'home/css/home.css' %}" />
   </head>
   <body>
-    {%block headerbody%} {%endblock%}
-    <headerbody>
-      <div class="container-fluid p-1 bgtop1 text-center">
-        <div class="container">
-          <marquee> Chăm Sóc Thú Cưng Số 1 Tại Thành Phố Hồ Chí Minh </marquee>
-        </div>
-      </div>
-
-      <div class="container col-10">
-        <div class="row pt-3">
-          <div class="col-md-2">
-            <img
-              src="{% static 'home/images/anh001.png'%}"
-              alt=""
-              class="w-50 m-0"
-            />
-          </div>
-          <div class="col-md-10 text-center menu">
-            <ul>
-              <li><a href="">CẨM NANG CHĂM SÓC</a></li>
-              <li><a href="">GỬI TRÔNG GIỮ</a></li>
-              <li><a href="">TIÊM PHÒNG</a></li>
-              <li><a href="../Templates/login.html">ĐĂNG NHẬP</a></li>
-              <li>
-                <a href="*">
-                  <span class="glyphicon glyphicon-search"></span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </headerbody>
-    {%block main%} {%endblock%}
-    <main>
-      <!-- Carousel -->
-      <div id="demo" class="carousel slide pt-3" data-bs-ride="carousel">
-        <!-- Indicators/dots -->
-        <div class="carousel-indicators">
-          <button
-            type="button"
-            data-bs-target="#demo"
-            data-bs-slide-to="0"
-            class="active"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#demo"
-            data-bs-slide-to="1"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#demo"
-            data-bs-slide-to="2"
-          ></button>
-        </div>
-
-        <!-- The slideshow/carousel -->
-        <div class="carousel-inner box">
-          <div
-            class="carousel-item active d-flex justify-content-center align-items-center"
-          >
-            <img
-              src="{% static 'home/images/cham-soc-thu-cung.jpg'%}"
-              alt=" "
-              class="d-block w-90"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="{% static 'home/images/BANNER1.webp'%}"
-              alt=" "
-              class="d-block w-100"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="{% static 'home/images/hinh9.jpg'%}"
-              alt=" "
-              class="d-block w-100"
-            />
-          </div>
-        </div>
-
-        <!-- Left and right controls/icons -->
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#demo"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon"></span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#demo"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon"></span>
-        </button>
-      </div>
-
-      <section class="pt-5 pb-5">
-        <div class="container col-10">
-          <div class="row">
-            <div class="col-md-6 body1">
-              <img
-                src="{% static 'home/images/hinh4.jpg' %}"
-                alt=""
-                class="w-100"
-              />
-              <a href="*"> KHÁM - CHỮA BỆNH </a>
-              <p>
-                Dịch vụ uy tín và chuyên nghiệp, với đội ngũ bác sĩ thú y chuyên
-                môn cao, yêu động vật
-              </p>
-            </div>
-            <div class="col-md-6 body1">
-              <img
-                src="{% static 'home/images/web2.jpg'%}"
-                alt=""
-                class="w-100"
-              />
-              <a href="*"> LƯU CHUỒNG </a>
-              <p>Dịch vụ Pet Hotel, thoải mái như ở nhà!!</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="pt-5 pb-5 box1 fw-bold">
-        <div class="container">
-          <h2 class="text-center pb-3 fw-bold text1">DANH MỤC MUA HÀNG</h2>
-          <div class="row">
-            <div class="inpic col-md-4 mb-3 rdbot">
-              <img
-                src="{% static 'home/images/thucan1.jpg'%}"
-                alt="thuc an"
-                class="w-100"
-              />
-              <div>
-                <h4 class="fw-bold">Thức Ăn</h4>
-                <a href="thuc an cho meo/cho">Thức Ăn Mèo/Chó</a>
-              </div>
-            </div>
-            <div class="inpic col-md-4 mb-3 rdbot">
-              <img
-                src="{% static 'home/images/dochoi.jpg'%}"
-                alt="do choi "
-                class="w-100"
-              />
-              <div>
-                <h4 class="fw-bold">Đồ Chơi</h4>
-                <a href="do choi cho meo/cho"> Đồ Chơi Mèo/Chó</a>
-              </div>
-            </div>
-            <div class="inpic col-md-4 mb-3">
-              <img
-                src="{% static 'home/images/thoitrang.jpg'%}"
-                alt="thoi trang"
-                class="w-100"
-              />
-              <div>
-                <h4 class="fw-bold">Thời Trang</h4>
-                <a href="quan ao cho meo/cho"> Thời Trang Mèo/Chó</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <div class="banner1">
-        <img
-          src="{% static 'home/images/anh1.jpeg'%}"
-          alt=""
-          class="w-100 rounded-3"
-        />
-      </div>
-      <section class="pt-5 pb-5 box3">
-        <h3 class="text-center mb-3 fw-bold text1">BÀI VIẾT LIÊN QUAN</h3>
-        <div class="container col-10">
-          <div class="row">
-            <div class="col-md-3">
-              <div class="card">
-                <div class="card-body">
-                  <img
-                    src="{% static 'home/images/web1.webp'%} "
-                    alt=""
-                    class="w-100 rounded-3"
-                  />
-                  <h5 class="fw-bold text2">HƯỚNG DẪN CHĂM SÓC</h5>
-                  <p class="card-text">
-                    Những chú cún, chó mèo sẽ là người bạn của bạn trong...
-                  </p>
-                  <a
-                    href="https://paddy.vn/blogs/cham-soc-thu-cung/huong-dan-cach-cham-soc-cho-meo-luon-khoe-manh-cho-nguoi-moi?srsltid=AfmBOorSoCF-hYNqUs5wxJvoVWzF9FFpd1_6qurRODBgDSawmKXeNEQa"
-                    class="card-link"
-                  >
-                    Đọc Thêm
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div class="card">
-                <div class="card-body">
-                  <img
-                    src="{% static 'home/images/hinh13.jpg'%} "
-                    alt=""
-                    class="w-100 rounded-3"
-                  />
-                  <div>
-                    <h5 class="fw-bold text2">DỊCH VỤ CHĂM SÓC DỊP TẾT</h5>
-                    <p class="card-text">
-                      Để đảm bảo việc chăm sóc thú cưng cho những ngày về...
-                    </p>
-                    <a
-                      href="https://laodong.vn/xa-hoi/gia-dat-do-dich-vu-cham-soc-thu-cung-van-hut-khach-dip-tet-quy-mao-1139439.ldo"
-                      class="card-link"
-                    >
-                      Đọc Thêm
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div class="card">
-                <div class="card-body">
-                  <img
-                    src="{% static 'home/images/web3.jpg'%} "
-                    alt=""
-                    class="w-100 rounded-3"
-                  />
-                  <h5 class="fw-bold text2">TOP DỊCH VỤ</h5>
-                  <p class="card-text">
-                    Dịch vụ chăm sóc thú cưng uy tín tại Sài Gòn...
-                  </p>
-                  <a
-                    href="https://helenexpress.com/top-10-dich-vu-cham-soc-thu-cung-uy-tin-nhat-tai-tphcm.html"
-                    class="card-link"
-                  >
-                    Đọc Thêm
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div class="card">
-                <div class="card-body">
-                  <img
-                    src="{% static 'home/images/hinh14.jpg' %} "
-                    alt=""
-                    class="w-100 rounded-3"
-                  />
-                  <h5 class="fw-bold text2">SPA THÚ CƯNG</h5>
-                  <p class="card-text">
-                    Dịch vụ Spa cho thú cưng tại PET GALAXY được...
-                  </p>
-                  <a href="https://www.ohmypet.vn/" class="card-link">
-                    Đọc Thêm
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-    {%block footer%} {%endblock%}
-    <footer class="footer">
-      <div class="container-fluid col-10">
-        <div class="row pt-3 pb-3">
-          <div class="col-md-4 care">
-            <h4>Đánh Giá Của Khách Hàng</h4>
-            <div>
-              <ul>
-                <li><a href="Xem them"> Nhấn Vào Để Xem </a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <h4 class="care">Pet Care</h4>
-            <ul>
-              <li>Phone: 0889969020</li>
-              <li>Maps: 25 Tô Ký - Tân Chánh Hiệp - Quận 12</li>
-              <li>Social:</li>
-            </ul>
-          </div>
-          <div class="col-md-4">
-            <ul>
-              <h4 class=" ">Hỗ Trợ Khách Hàng</h4>
-              <li><a href="*"> Chính Sách Mua Hàng </a></li>
-              <li><a href="*"> Điều Khoản Dịch Vụ </a></li>
-              <li><a href="*"> Hình Thức Thanh Toán </a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </footer>
+    {% block headerbody %} {% endblock %} {% block main %} {% endblock %} {%
+    block footer %} {% endblock %}
     <script src="" async defer></script>
   </body>
 </html>
