--- a/project/CNPM/home/templates/home/home.html
+++ b/project/CNPM/home/templates/home/home.html
@@ -17,6 +17,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>CHAM SOC THU CUNG</title>
     <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -28,50 +29,74 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <!--<link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="js/bootstrap.bundle.min.js"></script>-->
     {% load static %}
     <link rel="stylesheet" href="{% static 'home/css/home.css' %}" />
+    <script
+      type="text/javascript"
+      src="{% static 'home/js/home.js' %}"
+    ></script>
   </head>
   <body>
     <header>
-      <div class="container-fluid p-1 bgtop1 text-center">
-        <div class="container">
-          <marquee> Chăm Sóc Thú Cưng Số 1 Tại Thành Phố Hồ Chí Minh </marquee>
-        </div>
-      </div>
-
-      <div class="container col-10">
-        <div class="row pt-3">
-          <div class="col-md-2">
-            <a href="http://127.0.0.1:8000/" target="home">
-              <img
-                src="{% static 'home/images/anh001.png'%}"
-                alt=""
-                class="w-50 m-0"
-              />
-            </a>
+      <div class="sticky bb: 2px #e0d9d9 solid;">
+        <div class="container-fluid p-1 bgtop1 text-center text-light">
+          <div class="container">
+            <marquee>
+              Chăm Sóc Thú Cưng Số 1 Tại Thành Phố Hồ Chí Minh
+            </marquee>
           </div>
-          <div class="col-md-10 text-center menu">
-            <ul>
-              <li><a href="">CẨM NANG CHĂM SÓC</a></li>
-              <li><a href="">GỬI TRÔNG GIỮ</a></li>
-              <li><a href="">TIÊM PHÒNG</a></li>
-              <li><a href="../Templates/login.html">ĐĂNG NHẬP</a></li>
-              <li>
-                <a href="*">
-                  <span class="glyphicon glyphicon-search"></span>
-                </a>
-              </li>
-            </ul>
+        </div>
+
+        <div class="container col-10">
+          <div class="row pt-2 pb-2">
+            <div class="col-md-2">
+              <a href="" target="home">
+                <img
+                  src="{% static 'home/images/anh001.png'%}"
+                  alt=""
+                  class="w-50 m-0"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+            <div class="col-md-10 text-center menu">
+              <ul>
+                <li><a href="*">CẨM NANG CHĂM SÓC</a></li>
+                <li>
+                  <a href="">DỊCH VỤ CHO PET </a>
+                  <ul>
+                    <li><a href="*" class="text-center">Gửi Trông Giữ </a></li>
+                    <li><a href="*"> Tiêm Phòng </a></li>
+                  </ul>
+                </li>
+                <li><a href="../Templates/login.html">ĐĂNG NHẬP</a></li>
+                <li>
+                  <a href="*">
+                    <span class="glyphicon glyphicon-search"></span>
+                  </a>
+                </li>
+                <li>
+                  <a href="*">
+                    <span class="glyphicon glyphicon-shopping-cart"></span>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
     </header>
     <main>
       <!-- Carousel -->
-      <div id="demo" class="carousel slide pt-3" data-bs-ride="carousel">
+      <div id="demo" class="carousel slide pt-10" data-bs-ride="carousel">
         <!-- Indicators/dots -->
         <div class="carousel-indicators">
           <button
