--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -9,6 +9,10 @@
         <link href="{%static 'app/css/style.css'%}" rel="stylesheet" />
         <link href="{%static 'app/css/owl.carousel.min.css'%}" rel="stylesheet" />
         <link href="{%static 'app/css/all.min.css'%}" rel="stylesheet" />
+        <link href="{%static 'app/css/bootstrap.min.css'%}" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+        <link rel="stylesheet" type="text/css" href="{% static 'app/css/main.css'%}">
         <!--js-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
@@ -16,6 +20,7 @@
         <script src="{%static 'app/js/s3.js'%}" > </script>
         <script src="{%static 'app/js/all.min.js'%}" > </script>
         <script src="{%static 'app/js/myscrip.js'%}" > </script>
+       
 
         <title>Bác sĩ thú y</title>
         <meta name="description" content="">
